--- a/1811063611_NguyenHoangVinh_BigSchool/Content/Site.css
+++ b/1811063611_NguyenHoangVinh_BigSchool/Content/Site.css
@@ -22,3 +22,31 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse
+{
+    background-color : deeppink;
+    border-color : springgreen;
+}
+.course
+{
+    list-style: none;
+}
+.course > li
+{
+    position : relative;
+    margin-bottom : 31px;
+}
+.course > li .date
+{
+    text-align:center;
+    background-color : red;
+    color: white;
+    width: 60px;
+    border-radius: 8px;
+}
+.course > li .details
+{
+    position : absolute;
+    top: 0;
+    left: 70px;
+}
