--- a/1811063611_NguyenHoangVinh_BigSchool/Views/Courses/Create.cshtml
+++ b/1811063611_NguyenHoangVinh_BigSchool/Views/Courses/Create.cshtml
@@ -3,9 +3,11 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Create Courses </h2>
 @using (Html.BeginForm("Create","Courses"))
 {
-<h2>Create Courses </h2>
+@Html.AntiForgeryToken()
+    
 <form>
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
@@ -35,4 +37,8 @@
     </div>
     <div class="form-group"></div>
 </form>
+}
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval");
 }
