--- a/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
+++ b/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
@@ -1,6 +1,33 @@
-﻿@{
+﻿@model IEnumerable<_1811063611_NguyenHoangVinh_BigSchool.Models.Course >
+
+@{
     ViewBag.Title = "Home Page";
 }
+<div class="row">
+    <ul>
+        @foreach(var course in Model)
+        {
+            <li>
+                <div class="date">
+                    <div class=" month">
+                        @course.DateTime.ToString("MM")
+                    </div>
+                    <div class="day">
+                        @course.DateTime.ToString("dd")
+                    </div>
+                </div>
+                <div class="details">
+                    <span class="lecturer">
+                        @course.Lecturer.Name
+                    </span>
+                    <span class="category">
+                        @course.Category.Name
+                    </span>
+                </div>
+            </li>
+        }
+    </ul>
+</div>
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
