--- a/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
+++ b/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <ul>
-        @foreach(var course in Model)
+        @foreach (var course in Model)
         {
             <li>
                 <div class="date">
@@ -19,14 +19,50 @@
                 <div class="details">
                     <span class="lecturer">
                         @course.Lecturer.Name
+                        <button class=" btn btn-default btn-sm js-toggle-follow" data-user-id =" @course.LecturerId">Follow</button>
                     </span>
                     <span class="category">
                         @course.Category.Name
                     </span>
+                    <button data-course-id="@course.Id" class=" btn btn-default btn-sm js-toggle-attendance">Going?</button>
                 </div>
             </li>
         }
     </ul>
+    @section scripts
+{
+        <script>
+import { Button } from "bootstrap";
+
+            $(document).ready(function () {
+                $(".js-toggle-attendance").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                        .done(function () {
+                            button
+                                .removeClass("btn-default")
+                                .addClass("btn-info")
+                                .text("Going");
+                        })
+                        .fail(function () {
+                            alert("Some Thing Failed !!")
+                        });
+                });
+                $(".js-toggle-follow").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/followings", { FolloweeId: Button.attr("data-user-id") })
+                        .done(function () {
+                            button.text("Following");
+
+                        })
+                        .fail(function ()
+                    {
+                        alert("Something Failed !!");
+                    });
+                });
+            });
+        </script>
+    }
 </div>
 
 <div class="jumbotron">
