--- a/1811063611_NguyenHoangVinh_BigSchool/Views/Courses/Create.cshtml
+++ b/1811063611_NguyenHoangVinh_BigSchool/Views/Courses/Create.cshtml
@@ -4,9 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Create Courses </h2>
-@using (Html.BeginForm("Create","Courses"))
+@using (Html.BeginForm(Model.Action,"Courses"))
 {
 @Html.AntiForgeryToken()
+@Html.HiddenFor(m => m.Id)
     
 <form>
     <div class="form-group">
