--- a/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
+++ b/1811063611_NguyenHoangVinh_BigSchool/Views/Home/Index.cshtml
@@ -3,96 +3,119 @@
 @{
     ViewBag.Title = "Home Page";
 }
+@using Microsoft.AspNet.Identity
 <ul class="course">
-    @foreach( var course in Model.UpcommingCourses)
-        {
-            <li>
-                <div class="date">
-                    <div class=" month">
-                        @course.DateTime.ToString("MM")
-                    </div>
-                    <div class="day">
-                        @course.DateTime.ToString("dd")
-                    </div>
+    @foreach (var course in Model.UpcommingCourses)
+    {
+        <li>
+            <div class="date">
+                <div class=" month">
+                    @course.DateTime.ToString("MM")
                 </div>
-                <div class="details">
-                    <span class="lecturer">
-                        @course.Lecturer.Name
-                        @if (Model.ShowAction)
+                <div class="day">
+                    @course.DateTime.ToString("dd")
+                </div>
+            </div>
+            <div class="details">
+                <span class="lecturer">
+                    @course.Lecturer.Name
+                    @if (Model.ShowAction)
+                    {
+
+                        if (Model.CheckFollowing(course.LecturerId, User.Identity.GetUserId()))
                         {
-                        <button class=" btn btn-default btn-sm js-toggle-follow" data-user-id =" @course.LecturerId">Follow</button>
+                            <button data-user-id="@course.LecturerId" class="btn btn-info btn-sm js-toggle-un-follow"> Following</button>
                         }
-                        <br>
-                    </span>
-                    <span class="category">
-                        @course.Category.Name
-                    </span>
-                    @if(Model.ShowAction)
-                    {
-                    <button data-course-id="@course.Id" class=" btn btn-default btn-sm js-toggle-attendance">Going?</button>
+                        else
+                        {
+                            <button data-user-id="@course.LecturerId" class="btn btn-default btn-sm js-toggle-follow"> Follow</button>
+                        }
                     }
-                </div>
-            </li>
-        }
-    </ul>
-    @section scripts
-{
-        <script>
-import { Button } from "bootstrap";
 
-            $(document).ready(function () {
-                $(".js-toggle-attendance").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/attendances", { courseId: button.attr("data-course-id") })
-                        .done(function () {
-                            button
-                                .removeClass("btn-default")
-                                .addClass("btn-info")
-                                .text("Going");
-                        })
-                        .fail(function () {
-                            alert("Some Thing Failed !!")
-                        });
-                });
-                $(".js-toggle-follow").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/followings", { FolloweeId: Button.attr("data-user-id") })
-                        .done(function () {
-                            button.text("Following");
-
-                        })
-                        .fail(function ()
+                </span>
+                <span class="category">
+                    @course.Category.Name
+                </span>
+                @if (Model.ShowAction)
+                {
+                    if (Model.CheckAttend(course.Id, User.Identity.GetUserId()))
                     {
-                        alert("Something Failed !!");
-                    });
-                });
-            });
-        </script>
+                        <button data-course-id="@course.Id" class=" btn btn-info btn-sm js-toggle-un-attendance">Going</button>
+                    }
+                    else
+                    {
+                        <button data-course-id="@course.Id" class=" btn btn-default btn-sm js-toggle-attendance">Going?</button>
+                    }
+                }
+            </div>
+        </li>
     }
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+</ul>
+@section scripts
+   {
+    <script>
+        $(document).ready(function () {
+            ////Hủy Tham gia khóa học
+            $(".js-toggle-un-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/unattend", { courseId: button.attr("data-course-id") })
+                    .done(function () {
+                        button
+                            .removeClass("btn-success")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function () {
+                        alert("something failed");
+                    });
+            });
+            //hủy theo dõi
+            $(".js-toggle-un-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/unfollow", { courseId: button.attr("data-user-id") })
+                    .done(function () {
+                        button
+                            .removeClass("btn-success")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function () {
+                        alert("something failed");
+                    });
+            });
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+            //Đăng kí khóa học
+            $(".js-toggle-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                    .done(function () {
+                        button
+                            .removeClass("btn-default")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function () {
+                        alert("something failed");
+                    });
+            });
+            //Theo dõi giảng viên
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { FolloweeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button
+                            .removeClass("btn-default")
+                            .addClass("btn-info")
+                            .text("Following");
+                    })
+                    .fail(function () {
+                        alert("something failed");
+                    });
+            });
+
+        });
+
+
+
+    </script>
+}
